@startuml

title __ACCESSORY's Class Diagram__\n

  namespace  {
    namespace om.example.semesterexam {
      namespace accessory {
        class com.example.semesterexam.accessory.Bar {
            # maxValue : DoubleProperty
            # ratio : DoubleProperty
            # value : DoubleProperty
            + Bar()
            + bindLength()
            + bindLocation()
            + earnAction()
            + getMaxValue()
            + getValue()
            + rate()
            + removeBar()
            + resetMap()
        }
      }
    }
  }
  

  namespace  {
    namespace om.example.semesterexam {
      namespace accessory {
        class com.example.semesterexam.accessory.BloodBar {
            # maxValue : DoubleProperty
            # newValue : DoubleProperty
            # oldValue : DoubleProperty
            # rate : DoubleProperty
            + BloodBar()
            + bidingValues()
            + getMaxValue()
            + removeBloodBar()
            + resetMap()
            + setActionForBars()
            + setAll()
            + setBars()
            + setNewValue()
            + setOldValue()
            + setVisible()
        }
      }
    }
  }
  

  com.example.semesterexam.accessory.Bar -up-|> com.example.semesterexam.core.Subject
  com.example.semesterexam.accessory.Bar o-- com.example.semesterexam.core.Subject : s
  com.example.semesterexam.accessory.BloodBar o-- com.example.semesterexam.accessory.Bar : bar
  com.example.semesterexam.accessory.BloodBar o-- com.example.semesterexam.accessory.Bar : currentBlood
  com.example.semesterexam.accessory.BloodBar o-- com.example.semesterexam.manage.GameScreen : gameScreen
  com.example.semesterexam.accessory.BloodBar o-- com.example.semesterexam.accessory.Bar : maxBlood
  com.example.semesterexam.accessory.BloodBar o-- com.example.semesterexam.accessory.Bar : prevBlood
  com.example.semesterexam.accessory.BloodBar o-- com.example.semesterexam.core.Subject : s


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
